--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stripe_widget
-description: Stripe Add Card Plugin.
-version: 0.0.1
+description: A flutter plugin to integrate the stripe plugin for iOS and Android. Currently only adding a credit card as source is implemented.
+version: 0.0.2
 author: Thai Nguyen<thai.ng@shareclarity.com>
 homepage: http://shareclarity.com/
 
